Home: Fix the menu scaling on smaller displays

--- a/frontend/styles/home.css
+++ b/frontend/styles/home.css
@@ -170,7 +170,8 @@
 }
 
 #menu {
-	width: 890px;
+	max-width: 890px;
+	width: 100%;
 	height: 100px;
 	background: #FFFFFF;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
